--- a/Li_DL/HW_1/HW_1.ipynb
+++ b/Li_DL/HW_1/HW_1.ipynb
@@ -191,16 +191,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([[-1.35825331, -1.35883937, -1.359222  , ...,  0.26650729,\n         0.2656797 , -1.14082131],\n       [-1.35825331, -1.35883937, -1.51819928, ...,  0.26650729,\n        -1.13963133, -1.32832904],\n       [-1.35825331, -1.51789368, -1.67717656, ..., -1.13923451,\n        -1.32700613, -0.85955971],\n       ...,\n       [-0.88092053, -0.72262212, -0.56433559, ..., -0.57693779,\n        -0.29644471, -0.39079039],\n       [-0.7218096 , -0.56356781, -0.72331287, ..., -0.29578943,\n        -0.39013211, -0.1095288 ],\n       [-0.56269867, -0.72262212, -0.88229015, ..., -0.38950555,\n        -0.10906991,  0.07797893]])"
+      "text/plain": "(array([[-4.26244109, -4.2619117 , -4.26059692, ..., -6.36737333,\n         -6.1489991 , -6.08935727],\n        [-4.26223714, -4.26170811, -4.26029228, ..., -4.41557358,\n         -4.99414807, -5.43744613],\n        [-4.26182923, -4.26140272, -4.26019073, ..., -5.86135117,\n         -5.64375177, -6.30666098],\n        ...,\n        [-4.26264504, -4.26211529, -4.26100312, ..., -6.15050669,\n         -6.00464272, -5.94448813],\n        [-4.26091144, -4.26048656, -4.25927679, ..., -4.84930686,\n         -4.48890074, -5.5098807 ],\n        [-4.26264504, -4.26221708, -4.26100312, ..., -6.80110661,\n         -6.72642462, -6.74126841]]), array([[30.],\n        [41.],\n        [44.],\n        ...,\n        [17.],\n        [24.],\n        [29.]]))"
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 99
     }
    ],
    "source": [
@@ -208,19 +208,21 @@
     "    for j in range(len(x_data[i])):\n",
     "        if x_std[j]:\n",
     "            x_data[i][j] = (x_data[i][j] - x_mean[j]) / x_std[j]\n",
-    "x_data"
+    "x_data,y_data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Shuffle the set"
+    "### Shuffle the set\n",
+    "\n",
+    "此数据集有明显的时间连续性"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 100,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -283,7 +285,15 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "No.100 loss is 317789.39911053376\nNo.200 loss is 113778.16286938918\nNo.300 loss is 58422.67407566133\nNo.400 loss is 34747.065315552616\nNo.500 loss is 22386.362672656123\nNo.600 loss is 15138.24245595807\nNo.700 loss is 10573.734165545917\nNo.800 loss is 7564.170371096305\nNo.900 loss is 5516.2309618577\nNo.1000 loss is 4089.8506443231886\nNo.1100 loss is 3078.0947616085286\nNo.1200 loss is 2349.595916282807\nNo.1300 loss is 1818.313374246674\nNo.1400 loss is 1426.514842934186\nNo.1500 loss is 1134.6981629163583\nNo.1600 loss is 915.3890419206072\nNo.1700 loss is 749.2084235921003\nNo.1800 loss is 622.3182598547368\nNo.1900 loss is 524.729002703214\nNo.2000 loss is 449.1587054981753\nNo.2100 loss is 390.25233264655583\nNo.2200 loss is 344.0403786404491\nNo.2300 loss is 307.5589127111676\nNo.2400 loss is 278.58000836097665\nNo.2500 loss is 255.4185945381079\nNo.2600 loss is 236.79281534460966\nNo.2700 loss is 221.72224426895477\nNo.2800 loss is 209.453133680352\nNo.2900 loss is 199.40314139919678\nNo.3000 loss is 191.1202017543743\nNo.3100 loss is 184.25174414767795\nNo.3200 loss is 178.52153255027358\nNo.3300 loss is 173.7121526294403\nNo.3400 loss is 169.6517080317249\nNo.3500 loss is 166.20367022990973\nNo.3600 loss is 163.25910255538403\nNo.3700 loss is 160.73067972252753\nNo.3800 loss is 158.54807092244147\nNo.3900 loss is 156.65436255795453\nNo.4000 loss is 155.00327660167403\nNo.4100 loss is 153.5569999945755\nNo.4200 loss is 152.28448492205334\nNo.4300 loss is 151.16011314865358\nNo.4400 loss is 150.16264272626685\nNo.4500 loss is 149.27437440771413\nNo.4600 loss is 148.480489538299\nNo.4700 loss is 147.76852220011108\nNo.4800 loss is 147.1279367928359\nNo.4900 loss is 146.54978868101912\nNo.5000 loss is 146.02645049339074\n"
+     "text": "[[30.]\n [41.]\n [44.]\n ...\n [ 7.]\n [ 5.]\n [14.]]\nNo.100 loss is 157.3468091694279\nNo.200 loss is 152.1601461781137\nNo.300 loss is 149.1810719336844\nNo.400 loss is 147.4314397137706\nNo.500 loss is 146.38377865260102\nNo.600 loss is 145.7424973073254\nNo.700 loss is 145.33917164605842\nNo.800 loss is 145.0767904890207\nNo.900 loss is 144.89894501284178\nNo.1000 loss is 144.7725194758051\nNo.1100 loss is 144.67787256082963\nNo.1200 loss is 144.60322489226797\nNo.1300 loss is 144.54142692474096\nNo.1400 loss is 144.48808296773777\nNo.1500 loss is 144.44045302883313\nNo.1600 loss is 144.39680400503755\nNo.1700 loss is 144.35602251680538\nNo.1800 loss is 144.3173814065214\nNo.1900 loss is 144.2803973316256\nNo.2000 loss is 144.24474290290888\nNo.2100 loss is 144.21019183011663\nNo.2200 loss is 144.17658426248886\nNo.2300 loss is 144.14380462540268\nNo.2400 loss is 144.1117672779271\nNo.2500 loss is 144.0804071211888\nNo.2600 loss is 144.04967337602676\nNo.2700 loss is 144.01952541183684\nNo.2800 loss is 143.98992991719786\nNo.2900 loss is 143.96085895737824\nNo.3000 loss is 143.93228862402418\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "matrix([[ 1.52674501e-02],\n        [-1.52714488e-02],\n        [-1.52711393e-02],\n        [-1.52712133e-02],\n        [-1.52714028e-02],\n        [-1.52714803e-02],\n        [-1.52719056e-02],\n        [-1.52720923e-02],\n        [-1.52724285e-02],\n        [-1.52722416e-02],\n        [ 4.25222159e-04],\n        [ 2.04756781e-04],\n        [ 1.91023183e-04],\n        [ 3.49362404e-04],\n        [ 2.03627366e-04],\n        [ 4.82137766e-04],\n        [ 8.39925696e-05],\n        [ 2.80117844e-04],\n        [ 3.67740132e-04],\n        [ 2.47538666e-04],\n        [-1.11972727e-03],\n        [-1.08147325e-03],\n        [-5.83951669e-03],\n        [-1.68752578e-03],\n        [ 4.68471210e-03],\n        [ 9.63163814e-04],\n        [ 9.18219311e-04],\n        [ 6.60646308e-04],\n        [ 1.93888945e-04],\n        [ 1.88586903e-04],\n        [ 1.01558342e-04],\n        [ 1.03733105e-04],\n        [ 1.67116202e-04],\n        [-3.96524246e-05],\n        [ 2.04296201e-04],\n        [ 3.72623376e-05],\n        [ 2.47176317e-04],\n        [-1.51498212e-02],\n        [-1.50370412e-02],\n        [-1.49757977e-02],\n        [-1.51872734e-02],\n        [-1.52984035e-02],\n        [-1.52389549e-02],\n        [-1.52626045e-02],\n        [-1.52007958e-02],\n        [-1.52700467e-02],\n        [-1.52621535e-02],\n        [-1.52611713e-02],\n        [-1.52601130e-02],\n        [-1.52596748e-02],\n        [-1.52613405e-02],\n        [-1.52613389e-02],\n        [-1.52612994e-02],\n        [-1.52615344e-02],\n        [-1.52621823e-02],\n        [-1.52652591e-02],\n        [-1.52647219e-02],\n        [-1.52642716e-02],\n        [-1.52645015e-02],\n        [-1.52652172e-02],\n        [-1.52651845e-02],\n        [-1.52651785e-02],\n        [-1.52651561e-02],\n        [-1.52655267e-02],\n        [-1.52675892e-02],\n        [-1.52675905e-02],\n        [-1.52675936e-02],\n        [-1.52675994e-02],\n        [-1.52676132e-02],\n        [-1.52676284e-02],\n        [-1.52676455e-02],\n        [-1.52676579e-02],\n        [-1.52676369e-02],\n        [-1.52676151e-02],\n        [-1.52676115e-02],\n        [-1.52676060e-02],\n        [-1.52676023e-02],\n        [-1.52676118e-02],\n        [-1.52676111e-02],\n        [-1.52676130e-02],\n        [-1.52676155e-02],\n        [-1.52676230e-02],\n        [-1.52673843e-02],\n        [-1.52673745e-02],\n        [-1.52673866e-02],\n        [-1.52674054e-02],\n        [-1.52674285e-02],\n        [-1.52674280e-02],\n        [-1.52674358e-02],\n        [-1.52674587e-02],\n        [-1.52674616e-02],\n        [-1.92347352e-02],\n        [-1.63404942e-02],\n        [-1.66055376e-02],\n        [-1.43085076e-02],\n        [-1.87842858e-02],\n        [-8.87220629e-03],\n        [-1.22409286e-02],\n        [-1.49927685e-02],\n        [-1.37803648e-02],\n        [-1.52679305e-02],\n        [-1.52679268e-02],\n        [-1.52679140e-02],\n        [-1.52678969e-02],\n        [-1.52678717e-02],\n        [-1.52678563e-02],\n        [-1.52678442e-02],\n        [-1.52678176e-02],\n        [-1.52678313e-02],\n        [-1.52422268e-02],\n        [-1.51972346e-02],\n        [-1.51456875e-02],\n        [-1.50503203e-02],\n        [-1.52070393e-02],\n        [-1.48995980e-02],\n        [-1.50057152e-02],\n        [-1.52304476e-02],\n        [-1.53508282e-02],\n        [-2.69408163e-03],\n        [-2.89915831e-03],\n        [-1.61976645e-03],\n        [-1.96256341e-03],\n        [-1.53862348e-03],\n        [-1.57113345e-03],\n        [-1.80120693e-03],\n        [-1.86817773e-03],\n        [-2.21216349e-03],\n        [-1.52676343e-02],\n        [-1.52676344e-02],\n        [-1.52676344e-02],\n        [-1.52676343e-02],\n        [-1.52676342e-02],\n        [-1.52676342e-02],\n        [-1.52676342e-02],\n        [-1.52676342e-02],\n        [-1.52676342e-02],\n        [-1.52676414e-02],\n        [-1.52676413e-02],\n        [-1.52676415e-02],\n        [-1.52676414e-02],\n        [-1.52676413e-02],\n        [-1.52676415e-02],\n        [-1.52676415e-02],\n        [-1.52676414e-02],\n        [-1.52676415e-02],\n        [-1.49253010e-02],\n        [-1.51816356e-02],\n        [-1.48873963e-02],\n        [-1.53531716e-02],\n        [-1.52681437e-02],\n        [-1.58663230e-02],\n        [-1.67622646e-02],\n        [-1.71667725e-02],\n        [-1.74996493e-02],\n        [-1.58922869e-02],\n        [-1.59587147e-02],\n        [-1.50371441e-02],\n        [-1.56647589e-02],\n        [-1.58927463e-02],\n        [-1.64485047e-02],\n        [-1.66638668e-02],\n        [-1.78880136e-02],\n        [-1.81714084e-02]])"
+     },
+     "metadata": {},
+     "execution_count": 100
     }
    ],
    "source": [
@@ -299,21 +309,82 @@
     "\n",
     "adgrad = np.matrix(np.zeros([params+1, 1]))\n",
     "for item in range(iteration):\n",
-    "    z = x * w - y\n",
+    "    # loss function is MSE\n",
     "    loss = np.sum(np.power((x * w - y), 2)) / (rows * 2)\n",
     "    gradient = x.T * (x * w - y) / rows\n",
     "    adgrad += np.power(gradient, 2)\n",
     "    w = w - np.multiply(learning_rate / (np.sqrt(adgrad) + eps) , gradient)\n",
     "    if (item+1) % 100 == 0:\n",
-    "        print(f'No.{item+1} loss is {loss}')"
+    "        print(f'No.{item+1} loss is {loss}')\n",
+    "w"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predict PM2.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "(240, 163)"
+     },
+     "metadata": {},
+     "execution_count": 96
+    }
+   ],
+   "source": [
+    "test_data = pd.read_csv('ml2020spring-hw1/test.csv', encoding = 'big5', header = None)\n",
+    "test_data[test_data == 'NR'] = 0\n",
+    "test_data = test_data.iloc[:,2:]\n",
+    "\n",
+    "test_data = test_data.to_numpy()\n",
+    "x_test = np.empty([240, 18 * 9])\n",
+    "\n",
+    "for idx in range(240):\n",
+    "    x_test[idx,:] = test_data[idx * 18:(idx + 1) * 18,:].reshape(1,-1)\n",
+    "\n",
+    "test_mean = np.mean(x_test, axis = 0)\n",
+    "test_std = np.mean(x_test, axis = 0)\n",
+    "for i in range(int(x_test.shape[0])):\n",
+    "    for j in range(int(x_test.shape[1])):\n",
+    "        x_test[i][j] = (x_test[i][j] - test_mean[j]) / test_std[j]\n",
+    "\n",
+    "x_test = np.concatenate((np.ones([int(x_test.shape[0]), 1]), x_test), axis = 1 ).astype(float)\n",
+    "x_test = np.matrix(x_test)\n",
+    "x_test.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "id_1 : [[0.57070218]]\nid_2 : [[0.65235473]]\nid_3 : [[-0.30701628]]\nid_4 : [[0.40241385]]\nid_5 : [[0.26493919]]\nid_6 : [[0.37876118]]\nid_7 : [[0.26751866]]\nid_8 : [[0.25872025]]\nid_9 : [[0.08350114]]\nid_10 : [[-0.54046536]]\nid_11 : [[0.36352639]]\nid_12 : [[0.00556425]]\nid_13 : [[-0.15485916]]\nid_14 : [[-0.31624701]]\nid_15 : [[0.27171705]]\nid_16 : [[0.57299236]]\nid_17 : [[-0.22793238]]\nid_18 : [[-0.73573344]]\nid_19 : [[-3.0895214]]\nid_20 : [[0.52877332]]\nid_21 : [[0.3065869]]\nid_22 : [[-0.41542618]]\nid_23 : [[0.23809431]]\nid_24 : [[-0.01459011]]\nid_25 : [[0.7680247]]\nid_26 : [[-0.03546169]]\nid_27 : [[0.5654344]]\nid_28 : [[-0.78118857]]\nid_29 : [[0.47692801]]\nid_30 : [[-0.79470123]]\nid_31 : [[-0.27446418]]\nid_32 : [[0.39926989]]\nid_33 : [[0.69793198]]\nid_34 : [[0.06732249]]\nid_35 : [[-0.39245098]]\nid_36 : [[-0.1400854]]\nid_37 : [[0.33426404]]\nid_38 : [[0.01584088]]\nid_39 : [[-0.88209256]]\nid_40 : [[-0.21810047]]\nid_41 : [[-0.09417422]]\nid_42 : [[0.30681507]]\nid_43 : [[-0.11380245]]\nid_44 : [[-0.03591958]]\nid_45 : [[0.49132699]]\nid_46 : [[-0.03485305]]\nid_47 : [[0.61149473]]\nid_48 : [[0.21307249]]\nid_49 : [[-0.17935524]]\nid_50 : [[0.5521951]]\nid_51 : [[-0.18824565]]\nid_52 : [[0.23198935]]\nid_53 : [[-0.21128649]]\nid_54 : [[0.03074654]]\nid_55 : [[0.53550247]]\nid_56 : [[-0.62264158]]\nid_57 : [[0.38638187]]\nid_58 : [[0.23758614]]\nid_59 : [[-0.12802794]]\nid_60 : [[0.25524785]]\nid_61 : [[0.17285054]]\nid_62 : [[-0.3144216]]\nid_63 : [[0.30978078]]\nid_64 : [[-0.35435029]]\nid_65 : [[-0.68017721]]\nid_66 : [[0.4635608]]\nid_67 : [[0.31668167]]\nid_68 : [[-3.54656317]]\nid_69 : [[-0.03905508]]\nid_70 : [[-0.13157757]]\nid_71 : [[-0.41572043]]\nid_72 : [[0.55955512]]\nid_73 : [[-0.30671006]]\nid_74 : [[0.34195127]]\nid_75 : [[0.06061587]]\nid_76 : [[0.41156211]]\nid_77 : [[-0.05866948]]\nid_78 : [[0.22592874]]\nid_79 : [[-0.5273909]]\nid_80 : [[0.34173016]]\nid_81 : [[0.62195608]]\nid_82 : [[0.01886594]]\nid_83 : [[0.03461598]]\nid_84 : [[-0.46417492]]\nid_85 : [[0.61861808]]\nid_86 : [[0.38068547]]\nid_87 : [[0.44267037]]\nid_88 : [[0.33710445]]\nid_89 : [[0.56975579]]\nid_90 : [[0.05838734]]\nid_91 : [[-0.07161182]]\nid_92 : [[0.15126636]]\nid_93 : [[-1.91630815]]\nid_94 : [[-0.15868531]]\nid_95 : [[0.45220732]]\nid_96 : [[0.17169731]]\nid_97 : [[0.31677724]]\nid_98 : [[0.46134037]]\nid_99 : [[0.32624054]]\nid_100 : [[0.33887494]]\nid_101 : [[0.75560921]]\nid_102 : [[0.22363681]]\nid_103 : [[-0.49718759]]\nid_104 : [[0.11015871]]\nid_105 : [[0.33615416]]\nid_106 : [[0.43960402]]\nid_107 : [[0.14870167]]\nid_108 : [[0.56629058]]\nid_109 : [[-0.95804655]]\nid_110 : [[0.00774607]]\nid_111 : [[0.18369596]]\nid_112 : [[0.53165997]]\nid_113 : [[0.03418801]]\nid_114 : [[-0.06028478]]\nid_115 : [[0.60372234]]\nid_116 : [[0.50428237]]\nid_117 : [[-0.0444733]]\nid_118 : [[0.6484577]]\nid_119 : [[-0.16719273]]\nid_120 : [[0.59806302]]\nid_121 : [[-0.40281432]]\nid_122 : [[-0.0119157]]\nid_123 : [[0.32225912]]\nid_124 : [[0.10261993]]\nid_125 : [[0.08875664]]\nid_126 : [[0.09943392]]\nid_127 : [[0.5235276]]\nid_128 : [[-0.2855333]]\nid_129 : [[-0.22060435]]\nid_130 : [[-0.52134232]]\nid_131 : [[-0.36548802]]\nid_132 : [[0.08804033]]\nid_133 : [[-0.03168065]]\nid_134 : [[0.70437211]]\nid_135 : [[0.51375348]]\nid_136 : [[0.65271102]]\nid_137 : [[-0.29809232]]\nid_138 : [[-0.02940985]]\nid_139 : [[-2.36057129]]\nid_140 : [[-2.42386872]]\nid_141 : [[0.07991692]]\nid_142 : [[0.54578958]]\nid_143 : [[0.24101202]]\nid_144 : [[-0.05280888]]\nid_145 : [[0.7675167]]\nid_146 : [[0.31553295]]\nid_147 : [[0.46792368]]\nid_148 : [[-0.43496897]]\nid_149 : [[0.22400365]]\nid_150 : [[-0.01343316]]\nid_151 : [[0.44680019]]\nid_152 : [[0.44665041]]\nid_153 : [[0.05876637]]\nid_154 : [[0.77436932]]\nid_155 : [[-0.08973112]]\nid_156 : [[-0.69369711]]\nid_157 : [[0.68619647]]\nid_158 : [[0.42737661]]\nid_159 : [[-0.03242252]]\nid_160 : [[0.19266946]]\nid_161 : [[-0.0302589]]\nid_162 : [[0.5346007]]\nid_163 : [[0.73755671]]\nid_164 : [[0.32339282]]\nid_165 : [[-0.23621718]]\nid_166 : [[0.21047966]]\nid_167 : [[-4.78956513]]\nid_168 : [[0.82808098]]\nid_169 : [[-0.66742836]]\nid_170 : [[0.24539889]]\nid_171 : [[-0.16934965]]\nid_172 : [[-0.59245451]]\nid_173 : [[-0.38880584]]\nid_174 : [[0.458732]]\nid_175 : [[-0.92716574]]\nid_176 : [[-0.1928886]]\nid_177 : [[-0.48327931]]\nid_178 : [[-0.03618703]]\nid_179 : [[-0.03000254]]\nid_180 : [[0.43868313]]\nid_181 : [[0.23179953]]\nid_182 : [[0.17069373]]\nid_183 : [[0.37331554]]\nid_184 : [[0.22055594]]\nid_185 : [[0.81321848]]\nid_186 : [[0.39632418]]\nid_187 : [[0.28469275]]\nid_188 : [[-0.09127957]]\nid_189 : [[0.57251789]]\nid_190 : [[-1.05396464]]\nid_191 : [[-0.41575368]]\nid_192 : [[-0.05066537]]\nid_193 : [[0.22518918]]\nid_194 : [[-2.49445765]]\nid_195 : [[0.2020258]]\nid_196 : [[0.76957665]]\nid_197 : [[0.43578267]]\nid_198 : [[0.48607224]]\nid_199 : [[-0.04162657]]\nid_200 : [[-0.053267]]\nid_201 : [[-0.16620139]]\nid_202 : [[-1.15496523]]\nid_203 : [[-0.16299347]]\nid_204 : [[-0.07411835]]\nid_205 : [[0.86459169]]\nid_206 : [[0.8609669]]\nid_207 : [[0.33884505]]\nid_208 : [[0.60169286]]\nid_209 : [[-0.31976892]]\nid_210 : [[0.66205376]]\nid_211 : [[0.00224303]]\nid_212 : [[0.0821785]]\nid_213 : [[0.10901904]]\nid_214 : [[-0.0710837]]\nid_215 : [[-1.32323407]]\nid_216 : [[0.47725136]]\nid_217 : [[-0.80638643]]\nid_218 : [[0.47591286]]\nid_219 : [[0.69224087]]\nid_220 : [[-0.3239055]]\nid_221 : [[0.50139843]]\nid_222 : [[5.34317051e-05]]\nid_223 : [[-0.6135489]]\nid_224 : [[0.5608018]]\nid_225 : [[0.42170245]]\nid_226 : [[-0.02056501]]\nid_227 : [[0.14005886]]\nid_228 : [[-0.70419111]]\nid_229 : [[0.52846781]]\nid_230 : [[0.21975184]]\nid_231 : [[-0.11559155]]\nid_232 : [[0.44765759]]\nid_233 : [[-0.07982878]]\nid_234 : [[0.08801966]]\nid_235 : [[0.3509389]]\nid_236 : [[-0.3676561]]\nid_237 : [[-0.68370096]]\nid_238 : [[-0.24229178]]\nid_239 : [[0.37050614]]\nid_240 : [[0.48262996]]\n"
+    }
+   ],
+   "source": [
+    "y_pre = x_test * w\n",
+    "for i in range(len(y_pre)):\n",
+    "    print(f\"id_{i+1} : {y_pre[i]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**输出和理想结果差距较大，考虑将在train时将label y的值同样归一化。**"
+   ]
   }
  ],
  "metadata": {
