--- a/Li_DL/HW_2/hw2.ipynb
+++ b/Li_DL/HW_2/hw2.ipynb
@@ -6,6 +6,13 @@
    "source": [
     "# Machine Learning HW2"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read Training Set"
+   ]
   }
  ],
  "metadata": {
