--- a/Li_DL/HW_2/hw2.ipynb
+++ b/Li_DL/HW_2/hw2.ipynb
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Normalization"
+    "### Normalization"
    ]
   },
   {
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Shuffle"
+    "### Shuffle"
    ]
   },
   {
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Diveid train and val"
+    "### Diveid train and val"
    ]
   },
   {
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data preprocessing"
+    "### Data preprocessing"
    ]
   },
   {
@@ -185,22 +185,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "(43404, 10852)"
-     },
-     "metadata": {},
-     "execution_count": 32
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "(43404, 510)\n"
     }
    ],
    "source": [
     "train_size = train_X.shape[0]\n",
     "val_size = val_X.shape[0]\n",
-    "train_size,val_size"
+    "params_size = train_X.shape[1]\n",
+    "print(train_X.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training\n",
+    "**Logistic Regression & Adam**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sigmoid function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid_func(z):\n",
+    "    # Sigmoid function can be used to calculate probability.\n",
+    "    # To avoid overflow, minimum/maximum output value is set.\n",
+    "    return 1 / (1 + np.exp(-z))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'y' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-42-8a677a433946>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miteration\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'y' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "params = int(params_size + 1)\n",
+    "w = np.zeros([params,1])\n",
+    "X = np.concatenate((np.ones([train_size,1]), train_X), axis = 1)\n",
+    "\n",
+    "# Initialize the parameters of the adam\n",
+    "\n",
+    "iteration = 100\n",
+    "learning_rate = 0.001\n",
+    "s = np.empty([params,1])\n",
+    "r = np.empty([params,1])\n",
+    "p_1 = 0.9\n",
+    "p_2 = 0.999\n",
+    "eps = 1e-8\n",
+    "\n",
+    "for i in range(iteration):\n",
+    "    loss = np.sum(np.power((np.dot(X, w) - train_y), 2))"
    ]
   },
   {
