--- a/Li_DL/HW_2/hw2.ipynb
+++ b/Li_DL/HW_2/hw2.ipynb
@@ -213,28 +213,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def adam(X, y, w, s, r, lr=0.0001, p_1=0.9, p_2=0.999, eps=1e-8):\n",
-    "    batch_size = int(X.shape[0])\n",
-    "    params = int(X.shape[1])\n",
-    "\n",
-    "    gradient = (X.T * (sigmoid_func(X * w) - y)) / batch_size\n",
-    "\n",
-    "    s = p_1 * s + (1-p_1) * gradient\n",
-    "    r = p_2 * r + (1-p_2) * np.power(gradient, 2)\n",
-    "    s_gradient = s / (1 - p_1)\n",
-    "    r_gradient = r / (1 - p_2)\n",
-    "\n",
-    "    adam_gradent = np.multiply(lr / (np.sqrt(r_gradient) + eps), s_gradient)\n",
-    "\n",
-    "    return adam_gradent,s,r"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 103,
    "metadata": {
     "tags": [
@@ -501,6 +479,9 @@
     "learning_rate = 0.0001\n",
     "batch_size = 128\n",
     "loss = 0\n",
+    "train_loss = []\n",
+    "val_loss = []\n",
+    "acc_list = []\n",
     "\n",
     "# Initialize the parameters of the adam\n",
     "p_1 = 0.9\n",
@@ -509,30 +490,22 @@
     "s = np.matrix(np.zeros([params,1]))\n",
     "r = np.matrix(np.zeros([params,1]))\n",
     "\n",
-    "train_loss = []\n",
-    "val_loss = []\n",
-    "acc_list = []\n",
-    "\n",
     "for i in range(iteration):\n",
     "    # Mini Batch\n",
     "    for idx in range(int(train_size / batch_size)):\n",
     "        batch_x = X[idx * batch_size: (idx+1)*batch_size,:]\n",
     "        batch_y = Y[idx * batch_size: (idx+1)*batch_size,:]\n",
-    "    \n",
+    "        #Adam\n",
     "        gradient = (batch_x.T * (sigmoid_func(batch_x * w) - batch_y))/ batch_size\n",
-    "\n",
     "        s = p_1 * s + (1 - p_1) * gradient\n",
     "        r = p_2 * r + (1 - p_2) * np.power(gradient, 2)\n",
-    "\n",
     "        s_gradient = s / (1 - p_1)\n",
-    "        r_gradient = r / (1 - p_2)\n",
-    "        \n",
+    "        r_gradient = r / (1 - p_2)        \n",
     "        w = w - np.multiply(learning_rate / (np.sqrt(r_gradient) + eps), s_gradient)\n",
     "\n",
     "    loss = cost_function(X, Y, w)\n",
     "    train_loss.append(loss / train_size)\n",
     "    \n",
-    "\n",
     "    loss = cost_function(X_val, y_val, w)\n",
     "    val_loss.append(loss / val_size)\n",
     "    y_pred = np.round(forward(X_val, w))\n",
