--- a/Li_DL/HW_3/hw3.ipynb
+++ b/Li_DL/HW_3/hw3.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CNN"
+    "# CNN-Classification"
    ]
   },
   {
@@ -19,6 +19,80 @@
    "metadata": {},
    "source": [
     "Dataset: https://www.kaggle.com/c/ml2020spring-hw3/data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_photo(path,label = False):\n",
+    "    path_list = os.listdir(path)\n",
+    "    x = np.zeros([len(path_list), 128, 128, 3])\n",
+    "    y = np.zeros([len(path_list), 1])\n",
+    "    for i,f in enumerate(path_list):\n",
+    "        img = cv2.imread(os.path.join(path, f))\n",
+    "        x[i,:,:] = cv2.resize(img, (128, 128))\n",
+    "        if label:\n",
+    "            y[i,:] = int(f.split('_')[0])\n",
+    "    return x,y if label else x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "tags": [
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "path = '/Users/Juyi/Desktop/Code/Data/food-11'\n",
+    "train_data, train_label = read_photo(os.path.join(path, 'training'), True)\n",
+    "val_data, val_label = read_photo(os.path.join(path, 'validation'), True)\n",
+    "testing_data = read_photo(os.path.join(path, 'testing'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "(9866, 128, 128, 3) (9866, 1)\n"
+    }
+   ],
+   "source": [
+    "print(train_data.shape,train_label.shape)"
    ]
   },
   {
@@ -40,9 +114,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.6.9-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
