--- a/Li_DL/HW_3/hw3.ipynb
+++ b/Li_DL/HW_3/hw3.ipynb
@@ -33,12 +33,12 @@
     "import pandas as pd\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n"
+    "import torch.nn.functional as F"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +51,15 @@
     "        x[i,:,:] = cv2.resize(img, (128, 128))\n",
     "        if label:\n",
     "            y[i,:] = int(f.split('_')[0])\n",
-    "    return x,y if label else x"
+    "    if label:\n",
+    "        return x, y\n",
+    "    else:\n",
+    "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -82,17 +85,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "(9866, 128, 128, 3) (9866, 1)\n"
+     "text": "(9866, 128, 128, 3) (9866, 1)\n(3430, 128, 128, 3) (3430, 1)\n(3110, 128, 128, 3)\n"
     }
    ],
    "source": [
-    "print(train_data.shape,train_label.shape)"
+    "print(train_data.shape,train_label.shape)\n",
+    "print(val_data.shape,val_label.shape)\n",
+    "print(testing_data.shape)"
    ]
   },
   {
