--- a/Li_DL/HW_3/hw3.ipynb
+++ b/Li_DL/HW_3/hw3.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,14 @@
     "import pandas as pd\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.nn.functional as F"
+    "import torch.nn.functional as F\n",
+    "import torchvision.transforms as transforms\n",
+    "from torch.utils.data import DataLoader,Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -80,12 +82,12 @@
     "path = '/Users/Juyi/Desktop/Code/Data/food-11'\n",
     "train_data, train_label = read_photo(os.path.join(path, 'training'), True)\n",
     "val_data, val_label = read_photo(os.path.join(path, 'validation'), True)\n",
-    "testing_data = read_photo(os.path.join(path, 'testing'))"
+    "test_data = read_photo(os.path.join(path, 'testing'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +99,39 @@
    "source": [
     "print(train_data.shape,train_label.shape)\n",
     "print(val_data.shape,val_label.shape)\n",
-    "print(testing_data.shape)"
+    "print(test_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_transforms = transforms.Compose([transforms.ToPILImage(), transforms.RandomHorizontalFlip(), \n",
+    "        transforms.RandomRotation(15), transforms.ToTensor()])\n",
+    "test_transforms = transforms.Compose([transforms.ToPILImage(), transforms.ToTensor()])\n",
+    "\n",
+    "class ImgData(Dataset):\n",
+    "    def __init__(self, x, y = None, transforms = None):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        if y is not None:\n",
+    "            self.y = torch.LongTensor(y)\n",
+    "        self.transforms = transforms\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        X = self.x[index]\n",
+    "        if self.transforms is not None:\n",
+    "            X = self.transforms(X)\n",
+    "        if self.y is not None:\n",
+    "            Y = self.y[index]\n",
+    "            return X,Y\n",
+    "        else:\n",
+    "            return Y\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.x)"
    ]
   },
   {
@@ -105,7 +139,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "batch_size = 128\n",
+    "train_set = ImgData(train_data, train_label, train_transforms)\n",
+    "val_set = ImgData(val_data, val_label, test_transforms)\n",
+    "test_set = ImgData(test_data)\n",
+    "\n",
+    "train_loader = DataLoader(train_set, batch_size = batch_size, shuffle = True)\n",
+    "val_loader = DataLoader(val_set, batch_size = batch_size, shuffle = False)\n",
+    "test_loader = DataLoader(test_set, batch_size = 128, shuffle = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Classifier(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Classifier, self).__init__()\n",
+    "        self.cnn = nn.Sequential(\n",
+    "            nn.Conv2d(3, 64, 3, 1, 1),\n",
+    "            nn.BatchNorm2d(),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(2, 2)\n",
+    "        )"
+   ]
   }
  ],
  "metadata": {
