--- a/Li_DL/HW_3/hw3.ipynb
+++ b/Li_DL/HW_3/hw3.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,6 +34,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
+    "import torch.optim as optimz\n",
     "import torchvision.transforms as transforms\n",
     "from torch.utils.data import DataLoader,Dataset"
    ]
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,20 +153,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Classifier(nn.Module):\n",
+    "class Cnn(nn.Module):\n",
     "    def __init__(self):\n",
-    "        super(Classifier, self).__init__()\n",
+    "        super(Cnn, self).__init__()\n",
     "        self.cnn = nn.Sequential(\n",
-    "            nn.Conv2d(3, 64, 3, 1, 1),\n",
-    "            nn.BatchNorm2d(),\n",
+    "            nn.Conv2d(3, 64, 3, 1, 1),      # [64, 128, 128]\n",
+    "            nn.BatchNorm2d(64),\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2, 2)\n",
-    "        )"
+    "            nn.MaxPool2d(2, 2),             # [64, 64, 64]\n",
+    "\n",
+    "            nn.Conv2d(64, 128, 3, 1, 1),    # [128, 64, 64]\n",
+    "            nn.BatchNorm2d(128),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(2, 2),             # [128, 32, 32]\n",
+    "\n",
+    "            nn.Conv2d(128, 256, 3, 1, 1),   # [256, 32, 32]\n",
+    "            nn.BatchNorm2d(256),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(2, 2),             # [256, 16, 16]\n",
+    "\n",
+    "            nn.MaxPool2d(256, 512, 3, 1, 1),# [512, 16, 16]\n",
+    "            nn.BatchNorm2d(512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(2, 2),             # [512, 8, 8]\n",
+    "\n",
+    "            nn.MaxPool2d(512, 512, 3, 1, 1),# [512, 8,8]\n",
+    "            nn.BatchNorm2d(512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(2, 2)              # [512, 4, 4]\n",
+    "        )\n",
+    "        \n",
+    "        self.func = nn.Sequential(\n",
+    "            nn.Linear(512 * 8 * 8, 1024),    # [1024]\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(1024, 512),            # [512]\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(512, 11)               # [11]\n",
+    "        )\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        cnn_out = self.cnn(x)\n",
+    "        cnn_out = cnn_out.view(cnn_out.size()[0], -1)   #flattn\n",
+    "        func_out = self.func(cnn_out)\n",
+    "        return func_out"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "module 'torch.optim' has no attribute 'adam'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-74e92792f086>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdevice\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'cuda'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_available\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m'cpu'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcnn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCnn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0moptimzer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptimz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.001\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mcritization\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCrossEntropyLoss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mepoch_num\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'torch.optim' has no attribute 'adam'"
+     ]
+    }
+   ],
+   "source": [
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "cnn = Cnn().to(device)\n",
+    "optimzer = optimz.Adam(cnn.parameters(), lr = 0.001)\n",
+    "critization = nn.CrossEntropyLoss()\n",
+    "epoch_num = 2\n",
+    "for epoch in range(epoch_num):\n",
+    "    train_loss = 0\n",
+    "    val_loss = 0\n",
+    "    train_acc = 0\n",
+    "    val_acc = 0\n",
+    "    cnn.train()\n",
+    "    for i,data in enumerate(train_loader):\n",
+    "        optimzer.zero_grad()\n",
+    "        cnn_out = cnn(data[0].to(device))\n",
+    "        batch_loss = critization(cnn_out, data[1].to(device))\n",
+    "        batch_loss.backward()\n",
+    "        optimzer.step()\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
