--- a/Li_DL/HW_3/hw3.ipynb
+++ b/Li_DL/HW_3/hw3.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,13 +47,13 @@
    "source": [
     "def read_photo(path,label = False):\n",
     "    path_list = os.listdir(path)\n",
-    "    x = np.zeros([len(path_list), 128, 128, 3])\n",
-    "    y = np.zeros([len(path_list), 1])\n",
+    "    x = np.zeros((len(path_list), 128, 128, 3), dtype = np.uint8)\n",
+    "    y = np.zeros((len(path_list)), dtype = np.uint8)\n",
     "    for i,f in enumerate(path_list):\n",
     "        img = cv2.imread(os.path.join(path, f))\n",
     "        x[i,:,:] = cv2.resize(img, (128, 128))\n",
     "        if label:\n",
-    "            y[i,:] = int(f.split('_')[0])\n",
+    "            y[i] = int(f.split('_')[0])\n",
     "    if label:\n",
     "        return x, y\n",
     "    else:\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -92,9 +92,13 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "(9866, 128, 128, 3) (9866, 1)\n(3430, 128, 128, 3) (3430, 1)\n(3110, 128, 128, 3)\n"
+     "output_type": "stream",
+     "text": [
+      "(9866, 128, 128, 3) (9866, 1)\n",
+      "(3430, 128, 128, 3) (3430, 1)\n",
+      "(3110, 128, 128, 3)\n"
+     ]
     }
    ],
    "source": [
@@ -105,21 +109,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_transforms = transforms.Compose([transforms.ToPILImage(), transforms.RandomHorizontalFlip(), \n",
-    "        transforms.RandomRotation(15), transforms.ToTensor()])\n",
-    "test_transforms = transforms.Compose([transforms.ToPILImage(), transforms.ToTensor()])\n",
+    "        transforms.RandomRotation(15), transforms.ToTensor(),])\n",
+    "test_transforms = transforms.Compose([transforms.ToPILImage(), transforms.ToTensor(),])\n",
     "\n",
     "class ImgData(Dataset):\n",
-    "    def __init__(self, x, y = None, transforms = None):\n",
+    "    def __init__(self, x, y = None, transform = None):\n",
     "        self.x = x\n",
     "        self.y = y\n",
     "        if y is not None:\n",
     "            self.y = torch.LongTensor(y)\n",
-    "        self.transforms = transforms\n",
+    "        self.transforms = transform\n",
     "\n",
     "    def __getitem__(self, index):\n",
     "        X = self.x[index]\n",
@@ -129,7 +133,7 @@
     "            Y = self.y[index]\n",
     "            return X,Y\n",
     "        else:\n",
-    "            return Y\n",
+    "            return X\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.x)"
@@ -137,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 128\n",
     "train_set = ImgData(train_data, train_label, train_transforms)\n",
     "val_set = ImgData(val_data, val_label, test_transforms)\n",
-    "test_set = ImgData(test_data)\n",
+    "test_set = ImgData(test_data,transform = test_transforms)\n",
     "\n",
     "train_loader = DataLoader(train_set, batch_size = batch_size, shuffle = True)\n",
     "val_loader = DataLoader(val_set, batch_size = batch_size, shuffle = False)\n",
@@ -153,46 +157,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Cnn(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Cnn, self).__init__()\n",
+    "        # torch.nn.Conv2d(in_channels, out_channels, kernel_size, stride, padding)\n",
+    "        # torch.nn.MaxPool2d(kernel_size, stride, padding)\n",
+    "        # input 维度 [3, 128, 128]\n",
     "        self.cnn = nn.Sequential(\n",
     "            nn.Conv2d(3, 64, 3, 1, 1),      # [64, 128, 128]\n",
     "            nn.BatchNorm2d(64),\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2, 2),             # [64, 64, 64]\n",
+    "            nn.MaxPool2d(2, 2, 0),          # [64, 64, 64]\n",
     "\n",
     "            nn.Conv2d(64, 128, 3, 1, 1),    # [128, 64, 64]\n",
     "            nn.BatchNorm2d(128),\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2, 2),             # [128, 32, 32]\n",
+    "            nn.MaxPool2d(2, 2, 0),          # [128, 32, 32]\n",
     "\n",
     "            nn.Conv2d(128, 256, 3, 1, 1),   # [256, 32, 32]\n",
     "            nn.BatchNorm2d(256),\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2, 2),             # [256, 16, 16]\n",
+    "            nn.MaxPool2d(2, 2, 0),          # [256, 16, 16]\n",
     "\n",
-    "            nn.MaxPool2d(256, 512, 3, 1, 1),# [512, 16, 16]\n",
+    "            nn.Conv2d(256, 512, 3, 1, 1),# [512, 16, 16]\n",
     "            nn.BatchNorm2d(512),\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2, 2),             # [512, 8, 8]\n",
+    "            nn.MaxPool2d(2, 2, 0),          # [512, 8, 8]\n",
     "\n",
-    "            nn.MaxPool2d(512, 512, 3, 1, 1),# [512, 8,8]\n",
+    "            nn.Conv2d(512, 512, 3, 1, 1),# [512, 8,8]\n",
     "            nn.BatchNorm2d(512),\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2, 2)              # [512, 4, 4]\n",
+    "            nn.MaxPool2d(2, 2, 0)           # [512, 4, 4]\n",
     "        )\n",
     "        \n",
     "        self.func = nn.Sequential(\n",
-    "            nn.Linear(512 * 8 * 8, 1024),    # [1024]\n",
+    "            nn.Linear(512 * 4 * 4, 1024),   # [1024]\n",
     "            nn.ReLU(),\n",
-    "            nn.Linear(1024, 512),            # [512]\n",
+    "            nn.Linear(1024, 512),           # [512]\n",
     "            nn.ReLU(),\n",
-    "            nn.Linear(512, 11)               # [11]\n",
+    "            nn.Linear(512, 11)              # [11]\n",
     "        )\n",
     "    \n",
     "    def forward(self, x):\n",
@@ -204,24 +211,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "module 'torch.optim' has no attribute 'adam'",
+     "ename": "RuntimeError",
+     "evalue": "Trying to backward through the graph a second time, but the buffers have already been freed. Specify retain_graph=True when calling backward the first time.",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-74e92792f086>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdevice\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'cuda'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_available\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m'cpu'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcnn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCnn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0moptimzer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptimz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.001\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mcritization\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCrossEntropyLoss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mepoch_num\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'torch.optim' has no attribute 'adam'"
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-8ae449647dc3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0mtrain_pre\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcnn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0mbatch_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcritization\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcnn_out\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m         \u001b[0mbatch_loss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m         \u001b[0moptimzer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0mtrain_acc\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_pre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcpu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/deeplearing/lib/python3.6/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    105\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m         \"\"\"\n\u001b[0;32m--> 107\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    108\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/deeplearing/lib/python3.6/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     91\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     92\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Trying to backward through the graph a second time, but the buffers have already been freed. Specify retain_graph=True when calling backward the first time."
      ]
     }
    ],
    "source": [
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "cnn = Cnn().to(device)\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "#cnn = Classifier()\n",
+    "cnn = Cnn()\n",
     "optimzer = optimz.Adam(cnn.parameters(), lr = 0.001)\n",
     "critization = nn.CrossEntropyLoss()\n",
     "epoch_num = 2\n",
@@ -231,13 +241,17 @@
     "    train_acc = 0\n",
     "    val_acc = 0\n",
     "    cnn.train()\n",
-    "    for i,data in enumerate(train_loader):\n",
+    "    for data,label in train_loader:\n",
     "        optimzer.zero_grad()\n",
-    "        cnn_out = cnn(data[0].to(device))\n",
-    "        batch_loss = critization(cnn_out, data[1].to(device))\n",
+    "        train_pre = cnn(data)\n",
+    "        batch_loss = critization(train_pre, label)\n",
     "        batch_loss.backward()\n",
     "        optimzer.step()\n",
-    "        break"
+    "        train_acc += np.sum(np.argmax(train_pre.cpu().data.numpy(), axis = 1) == label.numpy())\n",
+    "        train_loss += batch_loss.item()\n",
+    "    \n",
+    "    print(f'{epoch} Epoch , the loss is {train_loss/train_set.__len__()}, the accuarcy is {train_acc/train_set.__len__()}')\n",
+    "    "
    ]
   },
   {
@@ -249,6 +263,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -260,11 +279,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
   }
  },
  "nbformat": 4,
