--- a/Li_DL/HW_3/hw3.ipynb
+++ b/Li_DL/HW_3/hw3.ipynb
@@ -1,31 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.6.9-final"
-    },
-    "colab": {
-      "name": "hw3.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -5153,7 +5126,10 @@
         "path = './food-11'\n",
         "train_data, train_label = read_photo(os.path.join(path, 'training'), True)\n",
         "val_data, val_label = read_photo(os.path.join(path, 'validation'), True)\n",
-        "test_data = read_photo(os.path.join(path, 'testing'))"
+        "test_data = read_photo(os.path.join(path, 'testing'))\n",
+        "print(train_data.shape,train_label.shape)\n",
+        "print(val_data.shape,val_label.shape)\n",
+        "print(test_data.shape)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -5169,11 +5145,7 @@
         },
         "outputId": "4f416d82-e409-4c45-bb8d-f767167e9f7b"
       },
-      "source": [
-        "print(train_data.shape,train_label.shape)\n",
-        "print(val_data.shape,val_label.shape)\n",
-        "print(test_data.shape)"
-      ],
+      "source": [],
       "execution_count": 7,
       "outputs": [
         {
@@ -5238,7 +5210,7 @@
         "\n",
         "train_loader = DataLoader(train_set, batch_size = batch_size, shuffle = True)\n",
         "val_loader = DataLoader(val_set, batch_size = batch_size, shuffle = False)\n",
-        "test_loader = DataLoader(test_set, batch_size = 128, shuffle = False)"
+        "test_loader = DataLoader(test_set, batch_size = batch_size, shuffle = False)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -5252,8 +5224,8 @@
       },
       "source": [
         "class Cnn(nn.Module):\n",
-        "    def __init__(self):\n",
-        "        super(Cnn, self).__init__()\n",
+        "    def __init__(self, dropout = 0.5):\n",
+        "        super(Cnn, self).__init__())\n",
         "        # torch.nn.Conv2d(in_channels, out_channels, kernel_size, stride, padding)\n",
         "        # torch.nn.MaxPool2d(kernel_size, stride, padding)\n",
         "        # input 维度 [3, 128, 128]\n",
@@ -5285,6 +5257,7 @@
         "        )\n",
         "        \n",
         "        self.func = nn.Sequential(\n",
+        "            nn.Dropout(dropout)\n",
         "            nn.Linear(512 * 4 * 4, 1024),   # [1024]\n",
         "            nn.ReLU(),\n",
         "            nn.Linear(1024, 512),           # [512]\n",
@@ -5420,5 +5393,32 @@
       "execution_count": 0,
       "outputs": []
     }
-  ]
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.6.9-final"
+    },
+    "colab": {
+      "name": "hw3.ipynb",
+      "provenance": [],
+      "collapsed_sections": []
+    },
+    "accelerator": "GPU"
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
