--- a/Li_DL/HW_3/hw3.ipynb
+++ b/Li_DL/HW_3/hw3.ipynb
@@ -5276,6 +5276,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def super_params():\n",
+        "    batch_size = [8,16,32,64,128]\n",
+        "    lr = [0.0001,0.0003,0.001,0.003,0.01,0.03,0.1]"
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "yL9tlWX5qV2p",
         "colab_type": "code",
